# trust-triangle

./: .gitignore  Cargo.toml  Makefile.toml  README.md  package-lock.json  package.json
docs/: EMPLOYEE_FLOW.md  INITIAL_LOADER_FLOW.md
frontend/: FLOW.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/pkg/: package.json  trust_triangle.d.ts  trust_triangle.js  trust_triangle_bg.js  trust_triangle_bg.wasm.d.ts
frontend/src/: App.tsx
frontend/src/components/: EmployeeView.tsx  IssuerView.tsx  LoadingScreen.tsx  NodeIdDisplay.tsx  RoleSelection.tsx  VerifierView.tsx
frontend/src/lib/: README.md  README_API.md  api.ts  credential-helpers.ts  example.ts  index.ts  log.ts  peer-node.ts  storage.ts
frontend/src/lib/storage/: employeeStorage.ts  storage.ts
frontend/src/types/: incomeCredential.ts
frontend/src/views/wallet/: IncomeCredentialView.tsx  NodeConfigView.tsx
src/: lib.rs  peer_node.rs  wasm.rs
src/credentials/: income_credential.rs  mod.rs
