[package]
name = "trust-triangle"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
blake3 = { version = "1", package = "iroh-blake3" }
hex = "0.4"
iroh = { version = "0.95", default-features = false, features = ["discovery-local-network"] }
iroh-base = { version = "0.95", default-features = false }
iroh-gossip = { version = "0.94", default-features = false, features = ["net"] }
iroh-tickets = "0.1.0"
n0-future = "0.1.2"
postcard = "1.1.1"
rand = "0.9.2"
serde = "1"
tokio = { version = "1", default-features = false, features = ["sync"] }
tracing = "0.1"
async-channel = "2.3.1"
clap = { version = "4.5.30", features = ["derive"], optional = true }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3", features = ["wasm_js"] }
serde-wasm-bindgen = "0.6.5"
tokio-stream = { version = "0.1.17", default-features = false, features = ["sync"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-subscriber-wasm = "0.1.0"
wasm-bindgen = "=0.2.104"
wasm-bindgen-futures = "0.4.50"
wasm-streams = "0.4.2"
serde_json = "1.0.145"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[features]
cli = ["tokio/full", "dep:clap"]

[profile.release]
codegen-units = 1
strip = "symbols"
debug = false
lto = true
opt-level = "z"
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-nontrapping-float-to-int", "--enable-bulk-memory", "--enable-sign-ext"]
